# atom

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile-atom  Dockerfile-atom-base  Dockerfile-atom-new  Dockerfile-base  Dockerfile-install-cudnn  Dockerfile-nucleus  Dockerfile-opencv  Dockerfile-opengl  Dockerfile-test  Dockerfile-vnc  README.md  docker-compose-arm.yml  docker-compose-build.yml  docker-compose-circle.yml  docker-compose-dev.yml  docker-compose-main.yml  docker-compose-run.yml  docker-compose-test.yml  docker-compose.yml  launch_nucleus.sh  pyproject.toml  redis.conf
.circleci/: Dockerfile-flake8  README.md  atom.yml  config.yml  docker-compose-circle.yml
.circleci/templates/: config_basic.yml  config_prod_and_test.yml
.github/workflows/: kubesec-analysis.yml  openshift.yml
base/: Dockerfile-python-numpy  Dockerfile-redis  README.md  build_base.sh  build_base_stock.sh
base/atom/: 01-Dockerfile-packages  10-Dockerfile-atom  minimize-amd64-args  production-amd64-args
base/extras/: 01-Dockerfile-packages  10-Dockerfile-opencv  11-Dockerfile-python-pillow  minimize-amd64-args  opencv-aarch64-args
base/stock/: blas-amd64-args  (+11 more)
doc/: .gitignore  Dockerfile  Gemfile  README.md  build_docs.sh  config.rb  docker-compose.yml  launch.sh
docker/: README.md  build.sh  docker-compose-registry.yml
lua-scripts/: stream_reference.lua
metrics/: .dockerignore  Dockerfile  README.md  docker-compose.yml  grafana.ini  launch.sh
proto/: Makefile
template/: Dockerfile  README.md  docker-compose.yml  launch.sh
utilities/: wait_for_nucleus.sh
(+426 files in other folders)
