[tool.poetry]
name = "atom"
version = "0.1.0"
description = "For installing dev deps on host machine"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
Cython = "0.29.16"
hiredis = "1.1.0"
msgpack = "0.6.2"
numpy = "1.18.3"
prompt-toolkit = "2.0.7"
psutil = "5.8.0"
pyarrow = "0.17.0"
pyfiglet = "0.7.6"
pytest = "6.2.2"
redis = "3.5.3"
redistimeseries = "1.4.3"
rmtest = "0.7.0"
six = "1.15.0"
wcwidth = "0.2.5"
typing_extensions = "3.7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
